--- a/app/views/static_pages/confirm_email.html.erb
+++ b/app/views/static_pages/confirm_email.html.erb
@@ -1,1 +1,5 @@
-Please check your email to confirm you email address
+<% content_for :body_class, "confirmation-page no-bg" %>
+
+<div class="confirmation-page__content">
+    <h1 class="confirmation-page__title">An email has been sent to your inbox. Please confirm your email address</h1>
+</div>
