finished styling set_username page - need to add js username availability ajax

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -94,7 +94,7 @@ body {
             margin-top: -5vh;
         }
         .form-wrap {
-            @include vertical-align();
+            @include vertical-align(relative, 50vh);
         }
     }
 
