--- a/app/views/static_pages/set_username.html.erb
+++ b/app/views/static_pages/set_username.html.erb
@@ -11,7 +11,7 @@
                 <span class="js-error-case js-error-case--invalid">required</span>
                 <span class="js-error-case js-error-case--taken">username taken</span>
             </span>
-            <%= f.text_field :name, min: 2, placeholder: 'Username', class: "form-input js-validate-name" %>
+            <%= f.text_field :name, min: 2, placeholder: 'Username', class: "form-input js-validate--name" %>
         </div><!-- /.form-input--wrap -->
         <div class="form-input--wrap form-input--wrap-submit">
             <%= f.submit "Continue", class: "form-input js-form-submit" %>
