--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -156,7 +156,7 @@ button {
     padding: 0 0 0 40px !important;
     width: calc(100% - 40px) !important;
     border: none !important;
-    background-color: $clouds !important;
+    background-color: $input-fill !important;
     -webkit-box-shadow: none !important;
     -moz-box-shadow: none !important;
     box-shadow: none !important;
