--- a/app/views/static_pages/confirm_email.html.erb
+++ b/app/views/static_pages/confirm_email.html.erb
@@ -1,5 +1,9 @@
 <% content_for :body_class, "confirmation-page no-bg" %>
 
+<%= link_to root_path do %><img src="/assets/homescreen-logo.png" class="header-img--logo"><% end %>
+
 <div class="confirmation-page__content">
     <h1 class="confirmation-page__title">An email has been sent to your inbox. Please confirm your email address</h1>
+
+<%= link_to "Resend Confirmation", root_path , class: "btn-sec" %>
 </div>
