--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -43,6 +43,17 @@ html body {
         }
     }
 
+    .btn-sec {
+        background-color: $lavender;
+        color: $white;
+        text-decoration: none;
+        padding: 10px;
+        min-width: 125px;
+        display: inline-block;
+        text-align: center;
+        margin: 20px 0;
+        border-radius: 4px;
+    }
     .btn--homepage {
         width: 40vw;
         background-color: $teal;
