--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -4,10 +4,7 @@ $dark-blue: #10172B;
 $dark-teal: #4fd1b5;
 $purple: #6f5499;
 $purple-border: #c8ade0;
-$purple-light: #ddd8e9;
-$black: #000;
 $credits-red: #D9232B;
-$white: #fff;
 $red: #e74c3c;
 $red-light: #F08080;
 $orange: #F2BB7C;
@@ -15,19 +12,13 @@ $orange-light: #FFD9AD;
 $orange-flat: #e67e22;
 $dark-orange: #edae65;
 $silver: #bdc3c7;
-$clouds: #ecf0f1;
-$teal: #56E7C8;
 $grayMediumLight: #eaeaea;
 $dark-seafoam: #03a679;
 $clay: #DB704E;
 $tan: #FDE2C7;
 $midnight-blue: #14112c;
 $midnight: #10162c;
-$lavender: #817bdf;
-$teal: #4fd2c2;
-$input-fill: #f6f7f9;
-$fb-blue: #448ccb;
-$blue-steel: #a5b0bd;
+
 
 // Fonts
 $xs: 12px;
@@ -36,3 +27,15 @@ $md: 16px;
 $lg: 18px;
 $xl: 22px;
 $xxl: 24px;
+
+
+// New Palette
+$lavender: #817bdf;
+$teal: #4fd2c2;
+$charcoal: #727070;
+$purple-light: #aaa7df;
+$fb-blue: #448ccb;
+$blue-steel: #a5b0bd;
+$clouds: #ecf0f1;
+$black: #000;
+$white: #fff;
