--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -6,6 +6,15 @@
 
 <% @mobile_container_id = "leaderboard--placeholder" %>
 
+<!-- Current User -->
+<div class="leaderboard-row leaderboard-row--current-user">
+    <div class="leaderboard-row__wrap">
+        <span class="leaderboard-rank">1</span>
+        <span class="leaderboard-user">Alex Morgan</span>
+        <span class="leaderboard-score">687</span>
+    </div>
+</div><!-- /.leaderboard-row -->
+
 <section class="leaderboard-nav">
     <h1 class="leaderboard__title">Flappy Pilot</h1>
 
@@ -154,6 +163,53 @@
 
                 <div class="leaderboard-row">
                     <span class="leaderboard-rank">2</span>
+                    <span class="leaderboard-user">Joe Shmoe</span>
+                    <span class="leaderboard-score">320</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">3</span>
+                    <span class="leaderboard-user">Alex Morgan</span>
+                    <span class="leaderboard-score">687</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">4</span>
+                    <span class="leaderboard-user">Joe Shmoe</span>
+                    <span class="leaderboard-score">320</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">5</span>
+                    <span class="leaderboard-user">Alex Morgan</span>
+                    <span class="leaderboard-score">687</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">6</span>
+                    <span class="leaderboard-user">Joe Shmoe</span>
+                    <span class="leaderboard-score">320</span>
+                </div><!-- /.leaderboard-row -->
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">7</span>
+                    <span class="leaderboard-user">Alex Morgan</span>
+                    <span class="leaderboard-score">687</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">8</span>
+                    <span class="leaderboard-user">Joe Shmoe</span>
+                    <span class="leaderboard-score">320</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">9</span>
+                    <span class="leaderboard-user">Alex Morgan</span>
+                    <span class="leaderboard-score">687</span>
+                </div><!-- /.leaderboard-row -->
+
+                <div class="leaderboard-row">
+                    <span class="leaderboard-rank">10</span>
                     <span class="leaderboard-user">Joe Shmoe</span>
                     <span class="leaderboard-score">320</span>
                 </div><!-- /.leaderboard-row -->
