--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -114,12 +114,17 @@ $falldown-font: #FEE2C7;
     position: relative;
     height: calc(100vh - 160px);
     overflow: scroll;
+    padding-top: 60px;
 }
 .leaderboard-nav {
     padding: 10px 0;
     background: $lavender;
     height: 40px;
     position: relative;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
 .leaderboader-head__icon {
     border: 1px solid $black;
