--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -244,3 +244,10 @@
     </section>
 
 <% end %>
+
+<script>
+    $(window).load(function(){
+        console.log('foo');
+        $('.leaderboard-row--current-user').addClass('animate');
+    })
+</script>
