connected leaderboard page to current index leaderboard links

--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -263,6 +263,7 @@ $falldown-font: #FEE2C7;
     color: $lavender;
     text-transform: capitalize;
     text-align: right;
+    font-weight: 500;
 }
 .leaderboard-back {
     position: absolute;
