--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -116,7 +116,7 @@
                     <span class="leaderboard-rank"><%= rank %></span>
                     <span class="leaderboard-user"><%= record[0] %></span>
                     <span class="leaderboard-score"><%= record[1] %></span>
-                </div>
+                </div><!-- /.leaderboard-row -->
             <% end %>
         </div>
 
