--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -10,13 +10,13 @@
 <div class="leaderboard-row leaderboard-row--current-user">
     <div class="leaderboard-row__wrap">
         <span class="leaderboard-rank">1</span>
-        <span class="leaderboard-user">Alex Morgan</span>
+        <span class="leaderboard-user"><%= current_user.name %></span>
         <span class="leaderboard-score">687</span>
     </div>
 </div><!-- /.leaderboard-row -->
 
 <section class="leaderboard-nav">
-    <h1 class="leaderboard__title">Flappy Pilot</h1>
+    <h1 class="leaderboard__title"><%= @game.name %></h1>
 
     <div id="leaderboard__cat--0" class="js-leaderboard__cat leaderboard__cat">
         <h2 class="tab-control__title js-tab--cat ga-tab--myfriends active" data-tab-cat=".leaderboard--my-friends">My Friends</h2>
@@ -217,29 +217,23 @@
         </div>
 
         <div class="tab-section js-tab-section leaderboard leaderboard--all-time">
-            <!-- Start Loop -->
+            <% get_alltime_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1</span>
-                    <span class="leaderboard-user">John Doe</span>
-                    <span class="leaderboard-score">687</span>
+                    <span class="leaderboard-rank"><%= rank %></span>
+                    <span class="leaderboard-user"><%= record[0] %></span>
+                    <span class="leaderboard-score"><%= record[1] %></span>
                 </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">2</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
-            <!-- End Loop -->
+            <% end %>
         </div>
 
         <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
-            <!-- Start Loop -->
+            <% get_weekly_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1</span>
-                    <span class="leaderboard-user">John Doe</span>
-                    <span class="leaderboard-score">687</span>
+                    <span class="leaderboard-rank"><%= rank %></span>
+                    <span class="leaderboard-user"><%= record[0] %></span>
+                    <span class="leaderboard-score"><%= record[1] %></span>
                 </div><!-- /.leaderboard-row -->
-            <!-- End Loop -->
+            <% end %>
         </div>
     </section>
 
