--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -140,6 +140,12 @@ $falldown-font: #FEE2C7;
     font-size: 18px;
     color: $white;
     font-weight: 400;
+    line-height: 1.3;
+
+    .game-leaderboard & {
+        color: $charcoal;
+
+    }
 }
 .leaderboard__subtitle {
     text-align: center;
@@ -183,7 +189,7 @@ $falldown-font: #FEE2C7;
     }
 }
 .tab-control__title {
-        font-size: 12px;
+        font-size: 11px;
         text-transform: uppercase;
         padding: 5px 0 7.5px;
         margin: 0;
@@ -215,8 +221,15 @@ $falldown-font: #FEE2C7;
     }
 }
 // Leaderboard Category
-.leaderboard--weekly {
+.leaderboard--my-friends {
+    &.not-fb-connected {
+        @include vertical-align();
+        margin-top: -25px;
 
+        .leaderboard__title {
+            margin: 0 0 20px;
+        }
+    }
 }
 .leaderboard-row {
     color: $charcoal;
