--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -153,66 +153,19 @@
 </div><!-- /.leaderboard-diff -->
 <% else %> <!--  ********************* Normal Leaderboard *********************  -->
     <section class="game-leaderboard">
-        <div class="tab-section js-tab-section leaderboard leaderboard--my-friends active">
+        <div class="tab-section js-tab-section leaderboard leaderboard--my-friends active not-fb-connected">  <!-- create conditional to check foor whether or not user is connected with FB  -->
             <!-- Start Loop -->
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1</span>
-                    <span class="leaderboard-user">Alex Morgan</span>
-                    <span class="leaderboard-score">687</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">2</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">3</span>
-                    <span class="leaderboard-user">Alex Morgan</span>
-                    <span class="leaderboard-score">687</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">4</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">5</span>
-                    <span class="leaderboard-user">Alex Morgan</span>
-                    <span class="leaderboard-score">687</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">6</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">7</span>
-                    <span class="leaderboard-user">Alex Morgan</span>
-                    <span class="leaderboard-score">687</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">8</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">9</span>
-                    <span class="leaderboard-user">Alex Morgan</span>
-                    <span class="leaderboard-score">687</span>
-                </div><!-- /.leaderboard-row -->
-
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">10</span>
-                    <span class="leaderboard-user">Joe Shmoe</span>
-                    <span class="leaderboard-score">320</span>
-                </div><!-- /.leaderboard-row -->
+            <!-- If Connected with Facebook -->
+            <% if false %>
+            <% else %> <!-- If not connected with Facebook -->
+                <h1 class="leaderboard__title">Connect with Facebook to see how your friends' scores stack up against yours!</h1>
+                <%= link_to "/auth/facebook" do %>
+                    <button class="btn--form btn--form-fb">
+                        <i class="fa fa-facebook btn--form__icon"></i>
+                        <h1 class="btn--form__copy">Sign up with Facebook</h1>
+                    </button><!-- /.btn--form -->
+                <% end %>
+            <% end %>
             <!-- End Loop -->
         </div>
 
