--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -35,6 +35,7 @@ $teal: #4fd2c2;
 $charcoal: #727070;
 $purple-light: #aaa7df;
 $fb-blue: #448ccb;
+$tw-blue: #2ab5ee;
 $blue-steel: #a5b0bd;
 $clouds: #ecf0f1;
 $black: #000;
