--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -135,9 +135,17 @@ $falldown-font: #FEE2C7;
     position: relative;
     top: 7.5px;
 }
+.leaderboard__social-share {
+    position: absolute;
+    margin: 0 auto;
+    width: 80%;
+    bottom: 100px;
+    left: 0;
+    right: 0;
+}
 .leaderboard__title {
     margin: 2px 0 0;
-    font-size: 18px;
+    font-size: $lg;
     color: $white;
     font-weight: 400;
     line-height: 1.3;
@@ -180,7 +188,7 @@ $falldown-font: #FEE2C7;
     &::after {
         content: "";
         width: 33.33%;
-        height: 4px;
+        height: 5px;
         background-color: #aaa7df;
         bottom: 0;
         position: absolute;
@@ -222,6 +230,20 @@ $falldown-font: #FEE2C7;
 }
 // Leaderboard Category
 .leaderboard--my-friends {
+    &.fb-connected {
+        height: calc(100vh - 110px);
+        position: relative;
+    }
+
+    .credits {
+        color: $red;
+    }
+    .form-input {
+        text-align: center;
+        padding-left: 0 !important;
+        margin: 20px auto;
+    }
+
     &.not-fb-connected {
         @include vertical-align();
         margin-top: -25px;
