inc font awesome social button size

--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -93,7 +93,7 @@ html body {
         }
 
         .fa {
-            // @include vertical-align();
+            font-size: $md;
             color: $white;
         }
     }
