--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -158,13 +158,17 @@
             <!-- If Connected with Facebook -->
             <% if true %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1</span>
+                    <span class="leaderboard-rank">1
+                        <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
+                    </span>
                     <span class="leaderboard-user">Alex M.</span>
                     <span class="leaderboard-score">365</span>
                 </div><!-- /.leaderboard-row -->
 
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank">5</span>
+                    <span class="leaderboard-rank">5
+                        <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
+                    </span>
                     <span class="leaderboard-user">Tyler C.</span>
                     <span class="leaderboard-score">211</span>
                 </div><!-- /.leaderboard-row -->
@@ -198,7 +202,7 @@
         <div class="tab-section js-tab-section leaderboard leaderboard--all-time">
             <% get_alltime_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank"><%= rank %></span>
+                    <span class="leaderboard-rank"><%= rank %><span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span></span>
                     <span class="leaderboard-user"><%= record[0] %></span>
                     <span class="leaderboard-score"><%= record[1] %></span>
                 </div><!-- /.leaderboard-row -->
@@ -208,7 +212,9 @@
         <div class="tab-section js-tab-section leaderboard leaderboard--weekly">
             <% get_weekly_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
                 <div class="leaderboard-row">
-                    <span class="leaderboard-rank"><%= rank %></span>
+                    <span class="leaderboard-rank"><%= rank %>
+                        <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
+                    </span>
                     <span class="leaderboard-user"><%= record[0] %></span>
                     <span class="leaderboard-score"><%= record[1] %></span>
                 </div><!-- /.leaderboard-row -->
