changed game title and removed margins

--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -16,7 +16,7 @@
 </div><!-- /.leaderboard-row -->
 
 <section class="leaderboard-nav">
-    <h1 class="leaderboard__title"><%= @game.name %></h1>
+    <h1 class="leaderboard__title leaderboard__title--headline"><%= @game.name %></h1>
 
     <div id="leaderboard__cat--0" class="js-leaderboard__cat leaderboard__cat">
         <h2 class="tab-control__title js-tab--cat ga-tab--myfriends active" data-tab-cat=".leaderboard--my-friends">My Friends</h2>
