--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -32,84 +32,7 @@ $falldown-font: #FEE2C7;
 .leaderboard-diff__title {
     color: $black;
 }
-#leaderboard--flappy-pilot {
-    background-color: $flappy-bg;
-    background-image: none;
 
-    .leaderboard-nav {
-        background: $flappy-font;
-    }
-
-    .tab-control__title {
-            color: $flappy-font;
-            &.active {
-                background: $flappy-font;
-                color: $white;
-            }
-    }
-
-    .leaderboard__cat {
-            border: 2px solid $flappy-font;
-    }
-    .leaderboard-row {
-        color: $flappy-font;
-    }
-}
-
-#leaderboard--traffic {
- background-color: $traffic-bg;
- background-image: none;
-
-    .leaderboard-nav {
-        background: $traffic-font;
-    }
-
-    .tab-control__title {
-            color: $traffic-font;
-            &.active {
-                background: $traffic-font;
-                color: $white;
-            }
-    }
-
-    .leaderboard__cat {
-            border: 2px solid $traffic-font;
-    }
-
-    .leaderboard-row {
-        color: $traffic-font;
-    }
-}
-
-#leaderboard--fall-down {
- background-color: $falldown-bg;
- background-image: none;
-
-    .leaderboard-nav {
-        background: $falldown-font;
-    }
-
-    .leaderboard__title,
-    .leaderboard__subtitle {
-        color: $falldown-bg;
-    }
-
-    .tab-control__title {
-            color: $falldown-font;
-            &.active {
-                background: $falldown-font;
-                color: $falldown-bg;
-            }
-    }
-
-    .leaderboard__cat {
-            border: 2px solid $falldown-font;
-    }
-
-    .leaderboard-row {
-        color: $white;
-    }
-}
 .game-leaderboard {
     position: relative;
     height: calc(100vh - 110px);
@@ -144,11 +67,15 @@ $falldown-font: #FEE2C7;
     right: 0;
 }
 .leaderboard__title {
-    margin: 2px 0 0;
+    margin: 0;
     font-size: $md;
     color: $white;
     font-weight: 400;
     line-height: 1.3;
+
+    &.leaderboard__title--headline {
+        font-size: $lg;
+    }
 
     .game-leaderboard & {
         color: $charcoal;
