added avatar to current user on leaderboard and bumped up size to match other rows

--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -4,7 +4,7 @@ $dark-blue: #10172B;
 $dark-teal: #4fd1b5;
 $purple: #6f5499;
 $purple-border: #c8ade0;
-$credits-red: #D9232B;
+$credits-red: #e74c3c;
 $red: #e74c3c;
 $red-light: #F08080;
 $orange: #F2BB7C;
