Added new survey

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -5,4 +5,6 @@
         <%= render 'survey_two' %>
     <% when "golf-survey" %>
         <%= render 'survey_three' %>
+    <% when "movie-survey" %>
+        <%= render 'survey_movie' %>
 <% end %>
