fixed flash notification styling

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -103,6 +103,7 @@ body {
     border: none;
     padding: 10px 0;
     border-radius: 0;
+    text-align: center;
     @include transition(top, 0.25s, ease, 1s);
 
     &.show {
@@ -110,7 +111,7 @@ body {
     }
 
     &.alert-error {
-        background-color: rgba(192, 57, 43, 0.9);
+        background-color: rgba(231, 76, 60, 0.9);
     }
     &.alert-success {
         background-color: rgba(79,210,194,0.9);
