changed confirmation page btn copy

--- a/app/views/static_pages/confirm_email.html.erb
+++ b/app/views/static_pages/confirm_email.html.erb
@@ -5,5 +5,5 @@
 <div class="confirmation-page__content">
     <h1 class="confirmation-page__title">An email has been sent to your inbox. Please confirm your email address</h1>
 
-<%= link_to "Resend Confirmation", root_path , class: "btn-sec" %>
+<%= link_to "Return Home", root_path , class: "btn-sec" %>
 </div>
