Added fb open graph data for sharing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,12 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="/assets/favicon-16x16.png">
 
+    <!-- FB Open Graph Data -->
+    <meta property="og:url" content="http://www.getluckee.com/" />
+    <meta property="og:title" content="Luckee" />
+    <meta property="og:description" content="Play free games. Earn Real Cash" />
+    <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
+
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
