--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -15,6 +15,12 @@
         <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
         <!-- touchSwipe library -->
 
+        <!-- FB Open Graph Data -->
+        <meta property="og:url" content="http://www.getluckee.com/" />
+        <meta property="og:title" content="Luckee" />
+        <meta property="og:description" content="Play free games. Earn Real Cash" />
+        <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
+
         <!-- iPhone SPLASHSCREEN-->
         <link href="/assets/apple-touch-startup-image-320x460.png" media="(device-width: 320px)" rel="apple-touch-startup-image">
         <!-- iPhone (Retina) SPLASHSCREEN-->
