--- a/app/views/games/leaderboard_new.html.erb
+++ b/app/views/games/leaderboard_new.html.erb
@@ -159,23 +159,21 @@
             <!-- Start Loop -->
             <!-- If Connected with Facebook -->
             <% if true %>
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">1
-                        <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
-                    </span>
-                    <span class="leaderboard-user">Alex M.</span>
-                    <span class="leaderboard-score">365</span>
-                </div><!-- /.leaderboard-row -->
+               <% get_friend_leaderboard({game_id: @game.id} ).each.with_index(1) do | record, rank | %>
+               <% name = record[0] %>
+               <% image = record[1] %>
+               <% score = record[2] %>
+            
+                    <div class="leaderboard-row">
+                        <span class="leaderboard-rank"><%= rank %>
+                            <span class="leaderboard__avatar" style="<% if !image.blank? %>background-image: url(<%= image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
+                        </span>
+                        <span class="leaderboard-user"><%= name %></span>
+                        <span class="leaderboard-score"><%= score %></span>
+                    </div><!-- /.leaderboard-row -->
 
-                <div class="leaderboard-row">
-                    <span class="leaderboard-rank">5
-                        <span class="leaderboard__avatar" style="<% if current_user.oath_image %>background-image: url(<%= current_user.oath_image %>); <% else %> background-image: url(/assets/avatar-icon.png); <% end %>"></span>
-                    </span>
-                    <span class="leaderboard-user">Tyler C.</span>
-                    <span class="leaderboard-score">211</span>
-                </div><!-- /.leaderboard-row -->
-
-                <% if true %>
+                <% end %>
+                <% if current_user.provider.blank? %>
                     <div class="leaderboard__social-share">
                         <h1 class="leaderboard__title">Things are looking a bit empty in here. Invite some friends to Luckee &amp; earn <span class="credits">25 credits</span> for every friend that signs up.</h1>
 
